adding class objectives

--- a/class_objectives-jaxson.qmd
+++ b/class_objectives-jaxson.qmd
@@ -28,3 +28,7 @@ Over the course it is expected you will:
 2.  Assist with issues on in class and on Slack.
 
 ## Personal objectives
+
+-   first years grad
+
+-   marine bio mussles inverts
