--- a/class_objectives-mike.qmd
+++ b/class_objectives-mike.qmd
@@ -28,3 +28,6 @@ Over the course it is expected you will:
 2.  Assist with issues on in class and on Slack.
 
 ## Personal objectives
+
+-   marine ecology-climate on coral and how some survive bleaching better
+-   particle imagery
