--- a/class_objectives-jessica.qmd
+++ b/class_objectives-jessica.qmd
@@ -28,3 +28,7 @@ Over the course it is expected you will:
 2.  Assist with issues on in class and on Slack.
 
 ## Personal objectives
+
+-   hoping to go into biotech esp pharmaceutical
+
+-   
